syntax = "proto3";

package benchmark;

option java_package = "benchmark";
option java_outer_classname = "BinaryTreeBenchmarkProtos";

// Binary tree node with uniform structure for controlled benchmarking.
// Every internal node has exactly 0 or 2 children (full binary tree).
message BinaryTreeNode {
  int32 value = 1;           // Node value
  int32 depth = 2;           // Depth from root (0-indexed)
  BinaryTreeNode left = 3;   // Left child (null for leaf nodes)
  BinaryTreeNode right = 4;  // Right child (null for leaf nodes)
  bytes payload = 5;         // Optional binary payload for testing variable-length field impact
}

// Binary tree document wrapper
message BinaryTreeDocument {
  BinaryTreeNode root = 1;
  int32 total_nodes = 2;
  int32 max_depth = 3;
}
